--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@
 
 .ui.segment, .ui.segments .segment {
     font-size: 14pt;
+    padding: 0;
+}
+
+.public-DraftEditor-content{
+    padding: 10px;
 }
 
 @keyframes App-logo-spin {
